# DigitalMarketBot

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/: config.py  log.txt  main.py
bot/admin/: admin.py
bot/dao/: dao.py  models.py
bot/data/: db.sqlite3
bot/migration/versions/: 1720ca777755_add_column_pay_id.py
bot/user/: catalog_router.py  kbs.py  user_router.py
data/: db.sqlite3
