[tool.poetry]
name = "digitalmarketbot"
version = "0.1.0"
description = ""
authors = ["joker_work <deripasko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.16.0"
aiosqlite = "^0.20.0"
loguru = "^0.7.3"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
